# simplest-project

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  docker-compose.yml
gateway/: Dockerfile
gateway/gateway/: package-lock.json
gateway/gateway/config/: gateway.config.yml
greetings-api/: CMakeLists.txt  Dockerfile
greetings-api/src/: App.cpp  AppComponent.hpp
greetings-api/src/controller/: MyController.hpp
greetings-api/test/: MyControllerTest.cpp  MyControllerTest.hpp
greetings-api/test/app/: MyApiTestClient.hpp  TestComponent.hpp
k8s/: gateway-deployment.yaml  gateway-ingressroute.yaml  gateway-svc.yaml  greetings-api-deployment.yaml  greetings-api-svc.yaml
src/: App.cpp
src/dto/: DTOs.hpp
test/: Tests.cpp
